overflow fix

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-html {
+body, html {
   font-family: "Roboto Mono", monospace;
   font-size: 16px;
   min-width: 100vw;
   max-width: 100vw;
   min-height: 100vw;
   max-height: 100vw;
+  overflow: hidden;
 }
 #container {
   text-align: center;
@@ -34,8 +35,8 @@ html {
   background-color: rgba(138, 138, 138, 0.75);
 }
 .choiceDiv {
-  /* position:fixed;
-    bottom:0; */
+  position:fixed;
+    bottom:0;
 }
 
 .choices {
